<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="0dp"
                android:layout_height="600dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:elevation="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/back_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <eightbitlab.com.blurview.BlurView
                android:id="@+id/blur_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_marginTop="200dp"
                android:background="@drawable/blur_back"
                app:blurOverlayColor="#90000000"
                app:layout_constraintTop_toBottomOf="@id/image_poster"
                app:layout_constraintBottom_toBottomOf="@id/image_poster">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/text_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/movie_title"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/button_bookmark"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="12dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/bookmark" />

                        <ImageView
                            android:id="@+id/button_share"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/share" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingHorizontal="8dp" />

                    <View
                        android:id="@+id/divider_info"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginVertical="8dp"
                        android:background="@drawable/gradient_bg" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_year_duration"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/date_text_duration"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/text_imdb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/imdb"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/label_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/summary"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_description_goes_here"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:lineSpacingExtra="2dp" />

                    <TextView
                        android:id="@+id/label_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/cast"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:layout_marginTop="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="32dp" />

                </LinearLayout>
            </eightbitlab.com.blurview.BlurView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_buy_ticket"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/get_started_bg"
                android:text="@string/buy_ticket"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/blur_overlay"
                app:layout_constraintTop_toBottomOf="@+id/blur_overlay"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>